--- a/KARCAN-AI/requirements.txt
+++ b/KARCAN-AI/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-scikit-learn
-pandas
-numpy
-joblib
-openpyxl
+streamlit==1.45.1
+scikit-learn==1.6.1
+pandas==2.2.3
+numpy==2.2.6
+joblib==1.5.1
+openpyxl==3.1.5
