--- a/KARCAN-AI/requirements.txt
+++ b/KARCAN-AI/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-scikit-learn
-pandas
-numpy
-joblib
-xlsxwriter
+streamlit==1.45.1
+scikit-learn==1.6.1
+pandas==2.2.3
+numpy==2.2.6
+joblib==1.5.1
+xlsxwriter==3.2.9
+openpyxl==3.1.5
